--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   },
   "dependencies": {
     "react": "17.0.1",
-    "react-native": "0.64.1"
+    "react-native": "0.64.1",
+    "ws": "^5.2.3"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
@@ -25,8 +26,7 @@
     "jest": "^26.6.3",
     "metro-react-native-babel-preset": "^0.64.0",
     "react-test-renderer": "17.0.1",
-    "typescript": "^3.8.3",
-    "ws": "^5.2.3"
+    "typescript": "^3.8.3"
   },
   "resolutions": {
     "@types/react": "^17"
