--- a/package.json
+++ b/package.json
@@ -5,13 +5,16 @@
   "scripts": {
     "android": "react-native run-android",
     "ios": "react-native run-ios",
+    "web": "react-scripts start",
     "start": "react-native start",
     "test": "jest",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
     "react": "17.0.1",
-    "react-native": "0.64.1"
+    "react-dom": "^17.0.2",
+    "react-native": "0.64.1",
+    "react-native-web": "^0.17.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
@@ -20,10 +23,9 @@
     "@types/jest": "^26.0.23",
     "@types/react-native": "^0.64.5",
     "@types/react-test-renderer": "^16.9.2",
-    "babel-jest": "^26.6.3",
     "eslint": "^7.14.0",
-    "jest": "^26.6.3",
     "metro-react-native-babel-preset": "^0.64.0",
+    "react-scripts": "^4.0.3",
     "react-test-renderer": "17.0.1",
     "typescript": "^3.8.3"
   },
@@ -39,6 +41,18 @@
       "jsx",
       "json",
       "node"
+    ]
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
     ]
   }
 }
