--- a/package.json
+++ b/package.json
@@ -20,17 +20,20 @@
   "devDependencies": {
     "@babel/core": "^7.12.9",
     "@babel/runtime": "^7.12.5",
-    "@react-native-community/eslint-config": "^2.0.0",
+    "@react-native-community/eslint-config": "^3.0.0",
     "@storybook/react": "^6.3.6",
     "@types/jest": "^26.0.23",
     "@types/react-native": "^0.64.5",
     "@types/react-test-renderer": "^16.9.2",
+    "@typescript-eslint/eslint-plugin": "^4.28.5",
+    "@typescript-eslint/parser": "^4.28.5",
     "babel-loader": "^8.2.2",
-    "eslint": "^7.14.0",
+    "eslint": "^7.31.0",
+    "eslint-plugin-react": "^7.24.0",
     "metro-react-native-babel-preset": "^0.64.0",
     "react-scripts": "^4.0.3",
     "react-test-renderer": "17.0.1",
-    "typescript": "^3.8.3"
+    "typescript": "^4.1.0"
   },
   "resolutions": {
     "@types/react": "^17"
