--- a/packages/mobile/ios/Podfile
+++ b/packages/mobile/ios/Podfile
@@ -9,7 +9,7 @@ target 'DesignSystem' do
   use_react_native!(
     :path => config[:reactNativePath],
     # to enable hermes on iOS, change `false` to `true` and then install pods
-    :hermes_enabled => false
+    :hermes_enabled => true
   )
 
   target 'DesignSystemTests' do
@@ -24,10 +24,19 @@ target 'DesignSystem' do
   use_flipper!({ 'Flipper' => '0.95.0', 'Flipper-Folly' => '2.6.7', 'Flipper-DoubleConversion' => '3.1.7' })
 
   post_install do |installer|
-    installer.pods_project.build_configurations.each do |config|
-      config.build_settings['EXCLUDED_ARCHS[sdk=iphonesimulator*]'] = 'arm64'
-      config.build_settings['IPHONEOS_DEPLOYMENT_TARGET'] = '12.1'
-    end
     react_native_post_install(installer)
+
+    projects = installer.aggregate_targets
+    .map{ |t| t.user_project }
+    .uniq{ |p| p.path }
+    .push(installer.pods_project)
+
+    projects.each do |project|
+      project.build_configurations.each do |config|
+        config.build_settings['EXCLUDED_ARCHS[sdk=iphonesimulator*]'] = 'i386 arm64'
+      end
+
+      project.save()
+    end
   end
 end
