--- a/packages/mobile/package.json
+++ b/packages/mobile/package.json
@@ -24,8 +24,7 @@
     "react-native-reanimated": "^2.2.0",
     "react-native-safe-area-context": "^3.2.0",
     "react-native-screens": "^3.4.0",
-    "react-native-vector-icons": "^8.1.0",
-    "react-native-web": "^0.17.1"
+    "react-native-vector-icons": "^8.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
@@ -42,15 +41,11 @@
     "babel-loader": "^8.2.2",
     "eslint": "^7.31.0",
     "eslint-plugin-react": "^7.24.0",
-    "html-webpack-plugin": "^5.3.2",
     "metro-react-native-babel-preset": "^0.64.0",
     "react-app-rewired": "^2.1.8",
     "react-scripts": "^4.0.3",
     "react-test-renderer": "17.0.1",
-    "typescript": "^4.1.0",
-    "webpack": "^5.47.1",
-    "webpack-cli": "^4.7.2",
-    "webpack-dev-server": "^3.11.2"
+    "typescript": "^4.1.0"
   },
   "resolutions": {
     "@types/react": "^17"
