--- a/packages/web-cra/package.json
+++ b/packages/web-cra/package.json
@@ -8,7 +8,7 @@
     "test": "react-scripts test"
   },
   "dependencies": {
-    "react": "17.0.1",
+    "react": "17.0.2",
     "react-dom": "^17.0.2",
     "react-native": "0.64.1",
     "react-native-web": "^0.17.1"
@@ -24,6 +24,7 @@
     "@typescript-eslint/eslint-plugin": "^4.28.5",
     "@typescript-eslint/parser": "^4.28.5",
     "babel-loader": "^8.2.2",
+    "babel-plugin-react-native-web": "^0.17.1",
     "eslint": "^7.31.0",
     "eslint-plugin-react": "^7.24.0",
     "react-test-renderer": "17.0.1",
