--- a/package.json
+++ b/package.json
@@ -13,20 +13,26 @@
     "web": "yarn workspace mobile web",
     "start": "yarn workspace mobile start",
     "test": "yarn workspaces run test",
-    "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
-    "storybook": "start-storybook"
+    "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
+  },
+  "dependencies": {
+    "next": "^11.0.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-native": "^0.64.2",
+    "react-native-web": "^0.17.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9",
-    "@babel/runtime": "^7.12.5",
     "@react-native-community/eslint-config": "^3.0.0",
     "@types/jest": "^26.0.23",
+    "@types/react": "^17.0.2",
+    "@types/react-native": "^0.64.12",
     "@typescript-eslint/eslint-plugin": "^4.28.5",
     "@typescript-eslint/parser": "^4.28.5",
-    "babel-loader": "^8.2.2",
+    "babel-plugin-react-native-web": "^0.17.1",
     "eslint": "^7.31.0",
     "eslint-plugin-react": "^7.24.0",
-    "typescript": "^4.1.0"
+    "typescript": "^4.3.5"
   },
   "resolutions": {
     "@types/react": "^17"
