--- a/packages/mobile/package.json
+++ b/packages/mobile/package.json
@@ -5,7 +5,6 @@
   "scripts": {
     "android": "react-native run-android",
     "ios": "react-native run-ios",
-    "web": "react-scripts start",
     "start": "react-native start",
     "test": "jest",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
@@ -17,9 +16,8 @@
     "@react-navigation/bottom-tabs": "^5.11.11",
     "@react-navigation/native": "^5.9.4",
     "@react-navigation/stack": "^5.14.5",
-    "react": "17.0.2",
-    "react-dom": "^17.0.2",
-    "react-native": "0.64.1",
+    "react": "*",
+    "react-native": "*",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-reanimated": "^2.2.0",
     "react-native-safe-area-context": "^3.2.0",
@@ -28,38 +26,15 @@
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
-    "@babel/plugin-syntax-jsx": "^7.14.5",
     "@babel/runtime": "^7.12.5",
-    "@react-native-community/eslint-config": "^3.0.0",
-    "@storybook/react": "^6.3.6",
-    "@types/jest": "^26.0.23",
-    "@types/react-native": "^0.64.5",
-    "@types/react-native-vector-icons": "^6.4.8",
-    "@types/react-test-renderer": "^16.9.2",
-    "@typescript-eslint/eslint-plugin": "^4.28.5",
-    "@typescript-eslint/parser": "^4.28.5",
-    "babel-loader": "^8.2.2",
-    "eslint": "^7.31.0",
-    "eslint-plugin-react": "^7.24.0",
+    "@react-native-community/eslint-config": "^2.0.0",
+    "babel-jest": "^26.6.3",
+    "jest": "^26.6.3",
     "metro-react-native-babel-preset": "^0.64.0",
-    "react-app-rewired": "^2.1.8",
-    "react-scripts": "^4.0.3",
-    "react-test-renderer": "17.0.1",
-    "typescript": "^4.1.0"
+    "react-test-renderer": "^17.0.2"
   },
   "resolutions": {
     "@types/react": "^17"
-  },
-  "jest": {
-    "preset": "react-native",
-    "moduleFileExtensions": [
-      "ts",
-      "tsx",
-      "js",
-      "jsx",
-      "json",
-      "node"
-    ]
   },
   "browserslist": {
     "production": [
