--- a/packages/web-cra/package.json
+++ b/packages/web-cra/package.json
@@ -5,44 +5,21 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test"
+    "test": "react-scripts test --watchAll=false --passWithNoTests"
   },
   "dependencies": {
-    "react": "17.0.2",
-    "react-dom": "^17.0.2",
-    "react-native": "0.64.1",
-    "react-native-web": "^0.17.1"
+    "react": "*",
+    "react-dom": "*",
+    "react-native": "*",
+    "react-native-web": "*"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9",
-    "@babel/runtime": "^7.12.5",
-    "@react-native-community/eslint-config": "^3.0.0",
-    "@storybook/react": "^6.3.6",
-    "@types/jest": "^26.0.23",
-    "@types/react-native": "^0.64.5",
-    "@types/react-test-renderer": "^16.9.2",
-    "@typescript-eslint/eslint-plugin": "^4.28.5",
-    "@typescript-eslint/parser": "^4.28.5",
-    "babel-loader": "^8.2.2",
-    "babel-plugin-react-native-web": "^0.17.1",
-    "eslint": "^7.31.0",
-    "eslint-plugin-react": "^7.24.0",
-    "react-test-renderer": "17.0.1",
-    "typescript": "^4.1.0"
+    "@types/react": "*",
+    "@types/react-native": "*",
+    "react-scripts": "^4.0.3"
   },
   "resolutions": {
     "@types/react": "^17"
-  },
-  "jest": {
-    "preset": "react-native",
-    "moduleFileExtensions": [
-      "ts",
-      "tsx",
-      "js",
-      "jsx",
-      "json",
-      "node"
-    ]
   },
   "browserslist": {
     "production": [
