--- a/packages/web-nextjs/tsconfig.json
+++ b/packages/web-nextjs/tsconfig.json
@@ -3,8 +3,7 @@
     "target": "esnext",
     "module": "esnext",
     "lib": [
-      "es2017",
-      "dom"
+      "es2017"
     ],
     "allowJs": true,
     "jsx": "preserve",
@@ -14,7 +13,7 @@
     "moduleResolution": "node",
     "allowSyntheticDefaultImports": true,
     "esModuleInterop": true,
-    "skipLibCheck": true,
+    "skipLibCheck": false,
     "forceConsistentCasingInFileNames": true,
     "noFallthroughCasesInSwitch": true,
     "resolveJsonModule": true
