--- a/packages/web-nextjs/package.json
+++ b/packages/web-nextjs/package.json
@@ -1,10 +1,12 @@
 {
 	"name": "web-nextjs",
 	"version": "0.0.1",
+	"private": true,
 	"scripts": {
 		"dev": "next",
 		"build": "next build",
-		"start": "next start"
+		"start": "next start",
+		"lint": "eslint . --ext .js,.jsx,.ts,.tsx"
 	},
 	"dependencies": {
 		"next": "^11.0.1",
