fix web-jextjs lint

--- a/packages/web-nextjs/package.json
+++ b/packages/web-nextjs/package.json
@@ -15,6 +15,7 @@
 		"react-native-web": "^0.17.1"
 	},
 	"devDependencies": {
-		"babel-plugin-react-native-web": "^0.17.1"
+		"babel-plugin-react-native-web": "^0.17.1",
+		"eslint-config-next": "^11.0.1"
 	}
 }
