--- a/packages/web-nextjs/package.json
+++ b/packages/web-nextjs/package.json
@@ -6,6 +6,7 @@
 		"dev": "next",
 		"build": "next build",
 		"start": "next start",
+		"test": "jest --passWithNoTests",
 		"lint": "eslint . --ext .js,.jsx,.ts,.tsx"
 	},
 	"dependencies": {
