--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -52,7 +52,7 @@ jobs:
         run: yarn
 
       - name: Test
-        run: yarn Test
+        run: yarn test
 
   build-android:
     name: Build Android
@@ -65,7 +65,8 @@ jobs:
         id: yarn-cache-dir-path
         run: echo "::set-output name=dir::$(yarn cache dir)"
 
-      - uses: actions/cache@v2
+      - name: Get yarn cache
+        uses: actions/cache@v2
         id: yarn-cache # use this to check for `cache-hit` (`steps.yarn-cache.outputs.cache-hit != 'true'`)
         with:
           path: ${{ steps.yarn-cache-dir-path.outputs.dir }}
@@ -76,7 +77,8 @@ jobs:
       - name: Install dependencies
         run: yarn
 
-      - uses: actions/cache@v2
+      - name: Get gradle cache
+        uses: actions/cache@v2
         with:
           path: |
             ~/.gradle/caches
