--- a/packages/mobile/ios/Podfile
+++ b/packages/mobile/ios/Podfile
@@ -37,8 +37,16 @@ target 'DesignSystem' do
       project.build_configurations.each do |config|
         config.build_settings['EXCLUDED_ARCHS[sdk=iphonesimulator*]'] = 'i386 arm64'
       end
-
       project.save()
+    end
+
+    installer.pods_project.targets.each do |target|
+      target.build_configurations.each do |config|
+        config.build_settings['IPHONEOS_DEPLOYMENT_TARGET'] = '12.1'
+      end
+      if target.name == "React-Core-AccessibilityResources"
+        target.remove_from_project
+      end
     end
   end
 end
