--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "test": "jest --passWithNoTests",
+    "test": "jest --env=jsdom --passWithNoTests",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
     "storybook": "start-storybook"
   },
@@ -18,6 +18,8 @@
     "@babel/runtime": "^7.12.5",
     "@react-native-community/eslint-config": "^3.0.0",
     "@storybook/react": "^6.3.6",
+    "@testing-library/jest-dom": "^5.14.1",
+    "@testing-library/react": "^12.0.0",
     "@types/jest": "^26.0.23",
     "@types/react-native": "^0.64.5",
     "@types/react-test-renderer": "^16.9.2",
@@ -26,6 +28,7 @@
     "babel-loader": "^8.2.2",
     "eslint": "^7.31.0",
     "eslint-plugin-react": "^7.24.0",
+    "identity-obj-proxy": "^3.0.0",
     "metro-react-native-babel-preset": "^0.64.0",
     "react-scripts": "^4.0.3",
     "react-test-renderer": "17.0.1",
