--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -5,7 +5,9 @@
   "scripts": {
     "test": "jest --env=jsdom --passWithNoTests",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
-    "storybook": "start-storybook"
+    "storybook": "start-storybook",
+    "build-storybook": "build-storybook",
+    "chromatic": "npx chromatic --project-token=bc273b0e43d0"
   },
   "dependencies": {
     "react": "17.0.2",
@@ -17,6 +19,9 @@
     "@babel/core": "^7.12.9",
     "@babel/runtime": "^7.12.5",
     "@react-native-community/eslint-config": "^3.0.0",
+    "@storybook/addon-essentials": "^6.3.6",
+    "@storybook/addon-links": "^6.3.6",
+    "@storybook/preset-create-react-app": "^3.2.0",
     "@storybook/react": "^6.3.6",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.0.0",
@@ -26,7 +31,9 @@
     "@typescript-eslint/eslint-plugin": "^4.28.5",
     "@typescript-eslint/parser": "^4.28.5",
     "babel-loader": "^8.2.2",
+    "chromatic": "^5.10.0-canary.0",
     "eslint": "^7.31.0",
+    "eslint-plugin-prettier": "^3.4.0",
     "eslint-plugin-react": "^7.24.0",
     "identity-obj-proxy": "^3.0.0",
     "metro-react-native-babel-preset": "^0.64.0",
