--- a/packages/mobile/package.json
+++ b/packages/mobile/package.json
@@ -17,14 +17,20 @@
     "@react-navigation/bottom-tabs": "^5.11.11",
     "@react-navigation/native": "^5.9.4",
     "@react-navigation/stack": "^5.14.5",
+    "color": "^4.0.1",
+    "deepmerge": "^4.2.2",
     "react": "17.0.2",
     "react-dom": "^17.0.2",
     "react-native": "0.64.1",
+    "react-native-animatable": "^1.3.3",
     "react-native-gesture-handler": "^1.10.3",
+    "react-native-magnus": "^1.0.62",
+    "react-native-modal": "^12.0.3",
     "react-native-reanimated": "^2.2.0",
     "react-native-safe-area-context": "^3.2.0",
     "react-native-screens": "^3.4.0",
-    "react-native-vector-icons": "^8.1.0"
+    "react-native-vector-icons": "^8.1.0",
+    "validate-color": "^2.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
