--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -54,6 +54,36 @@ jobs:
       - name: Test
         run: yarn test
 
+  build-bundle:
+    name: Build bundle
+    runs-on: ubuntu-20.04
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+
+      - name: Get yarn cache directory path
+        id: yarn-cache-dir-path
+        run: echo "::set-output name=dir::$(yarn cache dir)"
+
+      - uses: actions/cache@v2
+        id: yarn-cache # use this to check for `cache-hit` (`steps.yarn-cache.outputs.cache-hit != 'true'`)
+        with:
+          path: ${{ steps.yarn-cache-dir-path.outputs.dir }}
+          key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-yarn-
+
+      - name: Install dependencies
+        run: yarn
+
+      - name: Build bundle for iOS
+        working-directory: ./package/mobile
+        run: node_modules/.bin/react-native bundle --platform ios --dev false --entry-file index.js --bundle-output index.ios.bundle
+
+      - name: Build bundle for Android
+        working-directory: ./package/mobile
+        run: node_modules/.bin/react-native bundle --platform android --dev false --entry-file index.js --bundle-output index.android.bundle
+
   build-ios:
     if: 'false'
     name: Build iOS
