--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -61,10 +61,6 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
 
-      - uses: actions/setup-node@v2
-        with:
-          node-version: '16'
-
       - name: Get yarn cache directory path
         id: yarn-cache-dir-path
         run: echo "::set-output name=dir::$(yarn cache dir)"
@@ -82,11 +78,11 @@ jobs:
 
       - name: Build bundle for iOS
         working-directory: ./package/mobile
-        run: npx react-native bundle --platform ios --dev false --entry-file index.js --bundle-output index.ios.bundle
+        run: yarn run react-native bundle --platform ios --dev false --entry-file index.js --bundle-output index.ios.bundle
 
       - name: Build bundle for Android
         working-directory: ./package/mobile
-        run: npx react-native bundle --platform android --dev false --entry-file index.js --bundle-output index.android.bundle
+        run: yarn run react-native bundle --platform android --dev false --entry-file index.js --bundle-output index.android.bundle
 
   build-ios:
     if: 'false'
