--- a/packages/mobile/android/app/src/main/AndroidManifest.xml
+++ b/packages/mobile/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-  package="com.designsystem">
+  package="io.taeho.designsystem">
 
     <uses-permission android:name="android.permission.INTERNET" />
 
