--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -54,8 +54,8 @@ jobs:
       - name: Test
         run: yarn test
 
-  build-bundles:
-    name: Build bundles
+  build-ios-bundle:
+    name: Build iOS bundle
     runs-on: ubuntu-20.04
     steps:
       - name: Checkout
@@ -80,13 +80,35 @@ jobs:
         working-directory: ./packages/mobile
         run: yarn run react-native bundle --platform ios --dev false --entry-file index.js --bundle-output index.ios.bundle
 
+  build-android-bundle:
+    name: Build Android bundle
+    runs-on: ubuntu-20.04
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+
+      - name: Get yarn cache directory path
+        id: yarn-cache-dir-path
+        run: echo "::set-output name=dir::$(yarn cache dir)"
+
+      - uses: actions/cache@v2
+        id: yarn-cache # use this to check for `cache-hit` (`steps.yarn-cache.outputs.cache-hit != 'true'`)
+        with:
+          path: ${{ steps.yarn-cache-dir-path.outputs.dir }}
+          key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-yarn-
+
+      - name: Install dependencies
+        run: yarn
+
       - name: Build bundle for Android
         working-directory: ./packages/mobile
         run: yarn run react-native bundle --platform android --dev false --entry-file index.js --bundle-output index.android.bundle
 
-  build-ios:
+  build-ios-app:
     if: 'false'
-    name: Build iOS
+    name: Build iOS app
     runs-on: macos-latest
     steps:
       - name: Checkout
@@ -127,9 +149,9 @@ jobs:
         run: |
           xcodebuild -workspace DesignSystem.xcworkspace -scheme DesignSystem archive -archivePath DesignSystem.xcarchive -allowProvisioningUpdates -configuration AppStoreDistribution
 
-  build-android:
+  build-android-app:
     if: 'false'
-    name: Build Android
+    name: Build Android app
     runs-on: ubuntu-20.04
     steps:
       - name: Checkout
