--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -13,7 +13,8 @@
     "react": "17.0.2",
     "react-dom": "^17.0.2",
     "react-native": "0.64.1",
-    "react-native-web": "^0.17.1"
+    "react-native-web": "^0.17.1",
+    "tailwind-react-native-classnames": "^1.4.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
